Parallelized Automaton Generation